# genio-bot

./: .gitignore  README.md  README_TESTS.md  constraints.txt  pyproject.toml  requirements.txt  test_mqtt.py  test_stt.py  test_tts.py  test_wakeword.py
configs/: config.yaml.example
genio/cli/: run.py
logrotate/: genio
scripts/: install_pi5.sh
systemd/: genio-agent.service
