[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "genio-voice-agent"
version = "0.1.0"
description = "Genio Voice Agent for Raspberry Pi 5"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt",
    "pvporcupine",
    "faster-whisper",
    "sounddevice",
    "webrtcvad",
    "pydub",
    "pyyaml",
    "rich"
]

[project.scripts]
genioctl = "genio.cli.run:main"

[tool.hatch.build.targets.wheel]
packages = ["genio"]

[tool.hatch.build.targets.sdist]
include = ["genio", "configs", "systemd", "scripts", "README.md", "pyproject.toml"]
